--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "natural": "^5.1.1",
     "needle": "^3.0.0",
     "socket.io": "^4.2.0"
   }
