--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "natural": "^5.1.1",
     "needle": "^3.0.0",
-    "socket.io": "^4.2.0"
+    "socket.io": "^4.2.0",
+    "wordpos": "^2.1.0"
   }
 }
