--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "contains-emoji": "^1.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "natural": "^5.1.1",
